--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -24,10 +24,11 @@
                 android:layout_height="wrap_content">
 
             <AutoCompleteTextView
-                    android:id="@+id/email"
+                    android:id="@+id/identifiant"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/prompt_email"
+                    android:imeOptions="actionNext"
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
                     android:drawableStart="@drawable/ic_mail_outline_black_24dp"
@@ -52,16 +53,16 @@
                     android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                     android:drawablePadding="12dp"
             />
-            <Button
-                    android:id="@+id/login_button"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
-                    android:text="@string/action_log_in"
-                    style="@style/Widget.AppCompat.Button.Colored"
-                    android:drawableEnd="@drawable/ic_check_white_24dp"
-                    android:drawablePadding="0dp" android:layout_gravity="center_horizontal" android:layout_weight="1"/>
-
         </android.support.design.widget.TextInputLayout>
+
+        <Button
+                android:id="@+id/login_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:text="@string/action_log_in"
+                style="@style/Widget.AppCompat.Button.Colored"
+                android:drawableEnd="@drawable/ic_check_white_24dp"
+                android:drawablePadding="0dp" android:layout_gravity="center_horizontal"/>
     </LinearLayout>
 </LinearLayout>
