Add custom toasts integration

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#60ca91</color>
     <color name="colorPrimaryDark">#2d6044</color>
     <color name="colorAccent">#60ca91</color>
+    <color name="customToastBg">#272727</color>
 </resources>
