--- a/app/src/main/res/color/tab_text.xml
+++ b/app/src/main/res/color/tab_text.xml
@@ -3,5 +3,5 @@
     <item android:state_selected="true" android:color="@android:color/white" />
     <item android:state_focused="true" android:color="@android:color/white" />
     <item android:state_pressed="true" android:color="@android:color/white" />
-    <item android:color="@android:color/primary_text_light" />
+    <item android:color="@color/extremeLightGrey" />
 </selector>
