--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,49 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                android:orientation="vertical"
-                tools:layout_editor_absoluteY="8dp"
-                tools:layout_editor_absoluteX="8dp"
-                tools:context="com.chattree.chattree.profile.ProfileActivity">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:gravity="center_horizontal"
+              android:orientation="vertical"
+              tools:layout_editor_absoluteY="8dp"
+              tools:layout_editor_absoluteX="8dp"
+              tools:context="com.chattree.chattree.profile.ProfileActivity">
+
+    <android.support.v7.widget.Toolbar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?attr/colorPrimary"
+            android:theme="?attr/actionBarTheme"
+            android:minHeight="?attr/actionBarSize" android:id="@+id/toolbar"/>
 
     <ImageView
             android:id="@+id/image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/profile"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="64dp"
             android:contentDescription="@string/profile_picture"
     />
-
 
     <TextView
             android:id="@+id/login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
             android:text="@string/maxime75"
             android:textSize="30sp"
             android:textColor="@color/colorPrimary"
-            android:layout_below="@id/image"
     />
 
     <TextView
             android:id="@+id/statut"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
             android:layout_marginTop="10dp"
             android:text="@string/connected_status"
             android:textSize="15sp"
-            android:layout_below="@id/login"
             android:textColor="@color/colorPrimaryDark"/>
-
 
     <TextView
             android:id="@+id/location"
@@ -55,22 +54,18 @@
             android:drawableEnd="@drawable/ic_location_on_black_24dp"
             android:drawablePadding="4dp"
             android:gravity="center"
-            android:layout_centerHorizontal="true"
             android:layout_marginTop="10dp"
-            android:layout_below="@id/statut"
-    />
 
+    />
 
     <TextView
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
             android:layout_marginTop="70dp"
             android:text="@string/maxime_silva"
             android:textSize="16sp"
-            android:layout_below="@id/location"/>
-
+    />
 
     <TextView
             android:id="@+id/mail"
@@ -78,14 +73,9 @@
             android:layout_height="wrap_content"
             android:text="@string/maximesilva75_gmail_com"
             android:textSize="16sp"
-            android:layout_below="@id/name"
             android:layout_marginTop="10dp"
-            android:layout_gravity="center_vertical"
             android:drawableStart="@drawable/ic_mail_outline_black_24dp"
             android:drawablePadding="4dp"
-            android:gravity="center"
-            android:layout_centerHorizontal="true"
-
     />
 
-</RelativeLayout>
+</LinearLayout>
