--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -58,6 +58,14 @@
 
     />
 
+    <Button
+        android:id="@+id/btnGetLoc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:text="@string/Update_location"
+        android:onClick="onButtonClicked"/>
+
     <TextView
             android:id="@+id/name"
             android:layout_width="wrap_content"
