--- a/app/src/main/res/layout/fragment_thread_detail.xml
+++ b/app/src/main/res/layout/fragment_thread_detail.xml
@@ -1,59 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    >
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent">
 
+    <LinearLayout android:id="@+id/form"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:layout_alignParentBottom="true"
+                  android:layout_alignParentLeft="true"
+                  android:background="#91f1f1f1"
+                  android:orientation="horizontal"
+                  android:paddingBottom="2dp">
 
+        <EditText android:id="@+id/messageEditText"
+                  android:layout_width="0dp"
+                  android:layout_height="wrap_content"
+                  android:layout_weight="0.72"
+                  android:ems="10"
+                  android:maxHeight="80dp"
+                  android:hint="@string/votre_message"/>
 
-    <LinearLayout
-        android:id="@+id/form"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:background="#91f1f1f1"
-        android:orientation="horizontal"
-        android:paddingBottom="2dp"
-        >
-
-
-        <EditText
-
-            android:id="@+id/messageEditText"
-            android:layout_width="252dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignTop="@+id/button1"
-            android:layout_toLeftOf="@+id/sendMessageButton"
-            android:layout_weight="0.72"
-            android:ems="10"
-            android:maxHeight="80dp"
-            android:hint= " Votre Message..."/>
-
-
-        <ImageButton
-            android:id="@+id/sendMessageButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:background="@drawable/send"
-             />
-
+        <ImageButton android:id="@+id/sendMessageButton"
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"
+                     android:background="@drawable/send"
+                     android:contentDescription="@string/send_message"/>
     </LinearLayout>
 
     <ListView
-        android:id="@+id/liste"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-
-        android:divider="@null"
-        android:clickable="false"
-        android:layout_above="@id/form">
+            android:id="@+id/liste"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_centerHorizontal="true"
+            android:transcriptMode="alwaysScroll"
+            android:divider="@null"
+            android:clickable="false"
+            android:layout_above="@id/form">
     </ListView>
 
 </RelativeLayout>
