--- a/app/src/main/res/layout/layout_thread_node.xml
+++ b/app/src/main/res/layout/layout_thread_node.xml
@@ -14,11 +14,11 @@
             android:layout_centerHorizontal="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="8dp"
+            android:paddingRight="8dp"
             app:iconText="@string/ic_keyboard_arrow_right"
-            app:iconColor="@android:color/secondary_text_light"
+            app:iconColor="@android:color/tertiary_text_light"
             app:iconFont="fonts/material-icon-font.ttf"
-            app:iconSize="32dp"/>
+            app:iconSize="28dp"/>
 
     <com.github.johnkil.print.PrintView
             android:layout_alignWithParentIfMissing="true"
@@ -34,7 +34,7 @@
             app:iconSize="24dp"/>
 
     <TextView
-            android:id="@+id/node_value"
+            android:id="@+id/thread_title"
             android:layout_centerVertical="true"
             android:textSize="16sp"
             android:layout_marginLeft="10dp"
@@ -43,13 +43,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
-    <LinearLayout android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:orientation="horizontal"
-                  android:layout_toRightOf="@+id/node_value"
-                  android:layout_centerVertical="true"
-                  android:layout_centerHorizontal="true"
-                  android:background="@drawable/rounded_rectangle">
+    <LinearLayout
+            android:id="@+id/tag_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_toRightOf="@+id/thread_title"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/rounded_rectangle">
 
         <com.github.johnkil.print.PrintView
                 android:id="@+id/tag_icon"
