--- a/app/src/main/res/menu/home_toolbar_bottom_menu.xml
+++ b/app/src/main/res/menu/home_toolbar_bottom_menu.xml
@@ -2,11 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item
-            android:id="@+id/action_home"
-            android:icon="@drawable/ic_home_black_24dp"
-            android:title="@string/home"
-            app:showAsAction="ifRoom"/>
+    <item android:id="@+id/action_home"
+          android:icon="@drawable/ic_home_black_24dp"
+          android:title="@string/home"
+          app:showAsAction="ifRoom"/>
 
     <item android:id="@+id/action_group_conversations"
           android:title="@string/group_conversations"
