--- a/app/src/main/res/layout/custom_bottom_menu.xml
+++ b/app/src/main/res/layout/custom_bottom_menu.xml
@@ -9,15 +9,14 @@
             android:id="@+id/menu_item_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
             android:src="@drawable/ic_add_black_24dp"
             android:contentDescription="@string/menu_icon"
             android:layout_marginBottom="4dp"/>
 
     <TextView
             android:id="@+id/menu_item_title"
-            android:layout_width="wrap_content"
+            android:layout_width="60dp"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:textSize="16sp"/>
+            android:textSize="12sp"/>
 </LinearLayout>
