Auto select-all when editing a thread title

--- a/app/src/main/res/layout/layout_thread_node.xml
+++ b/app/src/main/res/layout/layout_thread_node.xml
@@ -59,7 +59,8 @@
                 android:maxLines="1"
                 android:imeActionId="@+id/thread_edit_validate"
                 android:imeActionLabel="OK"
-                android:imeOptions="actionDone"/>
+                android:imeOptions="actionDone"
+                android:selectAllOnFocus="true"/>
     </ViewSwitcher>
 
     <LinearLayout
