--- a/app/src/main/res/layout/activity_contact_list_check.xml
+++ b/app/src/main/res/layout/activity_contact_list_check.xml
@@ -1,18 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.chattree.chattree.home.ContactListCheckActivity">
+        android:orientation="vertical"
+        tools:context="com.chattree.chattree.home.ContactsListCheckActivity">
+
+    <android.support.v7.widget.Toolbar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?attr/colorPrimary"
+            android:theme="?attr/actionBarTheme"
+            android:minHeight="?attr/actionBarSize" android:id="@+id/toolbar">
+    </android.support.v7.widget.Toolbar>
 
     <fragment
             android:id="@+id/checkbox_contact_fragment"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:name="com.chattree.chattree.home.ContactCheckFragment"
+            android:name="com.chattree.chattree.home.ContactsListCheckFragment"
             android:orientation="horizontal"
     >
     </fragment>
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
